// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unallocated case view adapter should build a schema from the provided template and have sections maintain same order as schema object 1`] = `
Object {
  "data": Object {
    "my_date_field": "19/01/2020",
    "my_field": "Some Value",
  },
  "meta": Object {},
  "schema": Object {
    "defaultActionLabel": "Submit",
    "fields": Array [
      Object {
        "component": "heading",
        "props": Object {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": Array [],
      },
      Object {
        "component": "accordion",
        "props": Object {
          "name": "case-view",
          "sections": Array [
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "date",
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 1",
            },
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "date",
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 2",
            },
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "date",
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 3",
            },
          ],
        },
        "validation": Array [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render SOMU Approval case view sections 1`] = `
Object {
  "data": Object {
    "ApprovalRequests": "Dummy Approval Role Complete - approved",
    "my_field": "Some Value",
    "stage_2_field_1": "Some Label",
  },
  "meta": Object {},
  "schema": Object {
    "defaultActionLabel": "Submit",
    "fields": Array [
      Object {
        "component": "heading",
        "props": Object {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": Array [],
      },
      Object {
        "component": "accordion",
        "props": Object {
          "name": "case-view",
          "sections": Array [
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 1",
            },
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "text",
                    "label": "Stage 2 Field 1",
                    "name": "stage_2_field_1",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "somu-list",
                    "label": "Approval Requests",
                    "name": "ApprovalRequests",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 2",
            },
          ],
        },
        "validation": Array [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render SOMU COMP Contributions case view sections 1`] = `
Object {
  "data": Object {
    "CaseContributions": "Dummy Test Area - Dummy Test Unit Overdue 01/09/2021",
    "my_field": "Some Value",
    "stage_2_field_1": "Some Label",
  },
  "meta": Object {},
  "schema": Object {
    "defaultActionLabel": "Submit",
    "fields": Array [
      Object {
        "component": "heading",
        "props": Object {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": Array [],
      },
      Object {
        "component": "accordion",
        "props": Object {
          "name": "case-view",
          "sections": Array [
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 1",
            },
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "text",
                    "label": "Stage 2 Field 1",
                    "name": "stage_2_field_1",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "somu-list",
                    "label": "Case contributions",
                    "name": "CaseContributions",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 2",
            },
          ],
        },
        "validation": Array [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render SOMU MPAM Contributions case view sections 1`] = `
Object {
  "data": Object {
    "CaseContributions": "Dummy Test Area - Dummy Test Unit Overdue 01/09/2021",
    "my_field": "Some Value",
    "stage_2_field_1": "Some Label",
  },
  "meta": Object {},
  "schema": Object {
    "defaultActionLabel": "Submit",
    "fields": Array [
      Object {
        "component": "heading",
        "props": Object {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": Array [],
      },
      Object {
        "component": "accordion",
        "props": Object {
          "name": "case-view",
          "sections": Array [
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 1",
            },
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "text",
                    "label": "Stage 2 Field 1",
                    "name": "stage_2_field_1",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "component": "somu-list",
                    "label": "Case contributions",
                    "name": "CaseContributions",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 2",
            },
          ],
        },
        "validation": Array [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render checkboxes with custom label 1`] = `
Object {
  "data": Object {
    "checkbox_field_1": "Test",
    "checkbox_field_2": "Test",
  },
  "meta": Object {},
  "schema": Object {
    "defaultActionLabel": "Submit",
    "fields": Array [
      Object {
        "component": "heading",
        "props": Object {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": Array [],
      },
      Object {
        "component": "accordion",
        "props": Object {
          "name": "case-view",
          "sections": Array [
            Object {
              "items": Array [
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "choices": Array [
                      Object {
                        "label": "Test",
                        "value": "Test",
                      },
                    ],
                    "component": "checkbox",
                    "label": "Checkbox Field 1",
                    "name": "checkbox_field_1",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "mapped-display",
                  "props": Object {
                    "choices": Array [
                      Object {
                        "label": "Test",
                        "value": "Test",
                      },
                    ],
                    "component": "checkbox",
                    "label": "Checkbox Field 1",
                    "name": "checkbox_field_2",
                    "showLabel": true,
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 1",
            },
          ],
        },
        "validation": Array [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render with inverse default config 1`] = `
Object {
  "data": Object {
    "my_date_field": "2020-01-19",
    "my_field": "Some Value",
  },
  "meta": Object {},
  "schema": Object {
    "defaultActionLabel": "Submit",
    "fields": Array [
      Object {
        "component": "accordion",
        "props": Object {
          "name": "case-view",
          "sections": Array [
            Object {
              "items": Array [
                Object {
                  "component": "text",
                  "props": Object {
                    "disabled": true,
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "date",
                  "props": Object {
                    "disabled": true,
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "text",
                  "props": Object {
                    "disabled": true,
                    "label": "My Empty Field",
                    "name": "my_empty_field",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 1",
            },
            Object {
              "items": Array [
                Object {
                  "component": "text",
                  "props": Object {
                    "disabled": true,
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "date",
                  "props": Object {
                    "disabled": true,
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "text",
                  "props": Object {
                    "disabled": true,
                    "label": "My Empty Field",
                    "name": "my_empty_field",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 2",
            },
            Object {
              "items": Array [
                Object {
                  "component": "text",
                  "props": Object {
                    "disabled": true,
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "date",
                  "props": Object {
                    "disabled": true,
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "text",
                  "props": Object {
                    "disabled": true,
                    "label": "My Empty Field",
                    "name": "my_empty_field",
                  },
                  "validation": Array [],
                },
                Object {
                  "component": "checkbox",
                  "props": Object {
                    "disabled": true,
                    "label": "My Empty Field",
                    "name": "my_empty_field",
                  },
                  "validation": Array [],
                },
              ],
              "title": "Test Stage 3",
            },
          ],
        },
        "validation": Array [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;
